@@ -2,7 +2,7 @@
 	<h1>Fill out form:</h1>
 	<div id="registration-wrapper"> 
 		
-			<form name="registerform" id="registerform" autocomplete="off" method="POST">
+			<form name="registerform" id="registerform" autocomplete="off" method="post">
 				<table id="registertable">
 					<tr>
 						<td>Username: </td>
@@ -10,7 +10,7 @@
 					</tr>
 					<tr>
 						<td>Password: </td>
-						<td><input type="text" name="password" placeholder="password"><div class="register" style="display:{password_visibility}">{password_message}</div></td>
+						<td><input type="text" name="password" maxlength="10" placeholder="password (max 10 characters)"><div class="register" style="display:{password_visibility}">{password_message}</div></td>
 					</tr>
 					<tr>
 						<td><div class="register" style="display:{reg_visibility}">{register_success}</div></td>
