@@ -56,7 +56,7 @@ a:link {
     padding: 0.5em;
 }
 
-#loginbox > form input[type="text"]
+#loginbox > form input[type="text"], input[type="password"]
 {
     width: 12em;
     font-size: 0.75em;
